<resources>
    <string name="app_name">DD Test</string>
    <string name="something_went_wrong">Your internet may be down!.. Please check your connection.</string>
    <string name="no_amount">Something went wrong!.. Please try after sometime.</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="mobileNo">Mobile No.</string>
    <string name="regMobileNo">Registered Mobile No.</string>
    <string name="enterOtp">Enter OTP here</string>
    <string name="myplans">My Plans</string>
    <string name="invoice">Invoice</string>
    <string name="months">Months</string>
    <string name="title">Title</string>
    <string name="status">Status</string>
    <string name="check_network">Check your internet</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="subject">Subject</string>
    <string name="comment">Comment</string>
    <string name="password_not_match">Password does not match</string>
    <string name="failed_initialize">Failured to Initialize!</string>
    <string name="more">More</string>
    <string name="submit">Submit</string>
    <string name="error_player">Youtube player error</string>
    <string name="agree_text">I accept the</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="confirmation">Confirmation</string>
    <string name="wallet">Wallet</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cards">Cards</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="Continue">Continue</string>
    <string name="exit">Exit</string>
    <string name="skip">Skip</string>
    <string name="update">Update</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="install">Install</string>
    <string name="later">Not Now</string>
    <string name="reason_to_report">Reason to report</string>
    <string name="pay">Pay</string>
    <string name="paytm">PAYTM</string>
    <string name="card">Cards / UPI / Netbanking</string>
    <string name="upi">Google Pay / UPI / WhatsApp UPI</string>
    <string name="inApp">Google In-App Purchase</string>
    <string name="spam_videos">Spam Videos</string>
    <string name="coupon_amount">Coupon Amount: </string>
    <string name="total_amount">Total Amount: </string>
    <string name="cast">Cast</string>
    <string name="genre">Genre</string>
    <string name="apply">Apply Code</string>
    <string name="stripepk">pk_test_uDYrTXzzAuGRwDYtu7dkhaF3</string>
    <string name="facebook_id">5670811202993317</string>
    <string name="fb_login_protocol_scheme">fb5670811202993317</string>
    <string name="facebook_client_token">afbed46bd97ae7dc6e6e15f58b1a3ffe</string>
    <string name="kids">Kids</string>
    <string name="parental_control">Enable Parental Control</string>
    <string name="update_parental_control">Parental Control</string>
    <string name="no_videos_here">NO VIDEO AVAILABLE AT THE MOMENT</string>
    <string name="help">Help</string>
    <string name="verify">Verify</string>
    <string name="setup">Setup Now</string>
    <string name="checkbox_dont_show">Don\'t show again</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create an account</string>
    <string name="account_login">Already have an account </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_mobile_for_password">Enter Your Number to RESET the Password</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="otp_verification_msg">Enter 6-digit code we sent to</string>
    <string name="send_otp_again">Resend OTP</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="no_internet">No Internet</string>
    <string name="press_back_again_exit">Press back again to exit</string>
    <string name="series">Series</string>
    <string name="films">Films</string>
    <string name="search_hint">Search Here</string>
    <string name="manage_profile_text">Manage Profiles</string>
    <string name="delete_account_confirmation">Delete Confirmation</string>
    <string name="enter_password_to_delete">Enter password to delete account</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="sure_to_text">Are you sure to Logout from</string>
    <string name="card_number">Card Number</string>
    <string name="email_cant_be_empty">Email can\'t be empty</string>
    <string name="password_cant_be_empty">Password can\'t be empty</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="enter_phone_no">Please enter a Phone</string>
    <string name="enter_otp">Please enter a OTP</string>
    <string name="minimum_six_otp_characters">OTP must be six characters</string>
    <string name="minimum_six_characters">Password must be minimum six characters</string>
    <string name="match_passwords">Password does not match</string>
    <string name="select_query">Please select query type</string>
    <string name="names_cant_be_empty">Name can\'t be empty</string>
    <string name="comment_cant_be_empty">Comment can\'t be empty</string>
    <string name="network_check_success">Check your network</string>
    <string name="enter_valid_days">Validity Days can\'t be empty</string>
    <string name="valid_days_hint">Enter Validity</string>
    <string name="valid_days"> (Mention in days)</string>
    <string name="test_again">Test again</string>
    <string name="start_test">Start test</string>
    <string name="bebu_android_server">Bebu Android server</string>
    <string name="internet_connection">Internet Connection</string>
    <string name="test_failed_description">Test your internet connection</string>
    <string name="check_your_network_title">Check your Network</string>
    <string name="expiry">Expiry</string>
    <string name="select">Select</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Re-type new Password</string>
    <string name="change_password">Change Password</string>
    <string name="update_password">Update Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="save_profile">Save Profile</string>
    <string name="confirm">Click here to Confirm</string>
    <string name="click_to_accept">Click here to Accept</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="paypal">Paypal</string>
    <string name="stripe">Stripe</string>
    <string name="google_pay">Google pay</string>
    <string name="payment_failed">Payment Failed!</string>
    <string name="raise_ticket">Kindly raise a support ticket if your account has been changed.</string>
    <string name="raise_support_ticket">Raise a Support Ticket</string>
    <string name="payment_success">Payment Successful!</string>
    <string name="query_type">Query Type</string>
    <string name="payment_id">Payment Id</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="login_again_with_new_password">Password changed. Please login again with new password!</string>
    <string name="auto_renewal">Auto Renewal</string>
    <string name="warning_popup_1">This is A-rated movie</string>
    <string name="warning_popup_2">Press Yes to continue.</string>
    <string name="forgot_popup_1">Continue with Reset?</string>
    <string name="forgot_popup_2">Warning: After this operation you need to login again.</string>
    <string name="video_18_plus">This video contains 18+ content. Please make sure you are 18+</string>
    <string name="terms_and_privacypolicy">I accept the Terms &amp; Conditions and</string>
    <string name="terms_privacy_policy">Privacy Policy</string>
    <string name="agree_the_terms_and_condition">Please agree the Terms and Conditions and Privacy Policy</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="no_plans_avaliable">No Plans Available</string>
    <string name="amount">Amount</string>
    <string name="paid_date">Paid Date</string>
    <string name="no_notifications">No Notifications</string>
    <string name="not_available">Not Available</string>
    <string name="about">About</string>
    <string name="speed_test">Speed Test</string>
    <string name="no_cards_added">No cards found</string>
    <string name="cvv">CVV</string>
    <string name="xxxx_xxxx">xxxx-xxxx-xxxx-xxxx</string>
    <string name="card_hider_text">XXXX - XXXX - XXXX - </string>
    <string name="who_s_watching">Who\'s watching?</string>
    <string name="remove">Remove</string>
    <string name="autoRenewalMsg">Are you sure you want to enable auto renewal?</string>
    <string name="cancelRenewal">Are you sure you want to cancel auto renewal?</string>
    <string name="no_of_accounts">No of Accounts:</string>
    <string name="channel_name">Downloads</string>
    <string name="download_started">Download has been started</string>
    <string name="download_open">Open Downloads</string>
    <string name="download_cancelled">Download cancelled</string>
    <string name="no_suitable_download_urls">We couldn\'t find any suitable download URLs for this video. We will add it soon.</string>
    <string name="choose_download_quality">Choose download quality</string>
    <string name="no_videos">NO VIDEO AVAILABLE AT THE MOMENT</string>
    <string name="offline_videos">Downloads</string>
    <string name="problem_with_downloaded_video">Some problem with the downloaded video.</string>
    <string name="delete_from_offline">Remove from Offline</string>
    <string name="choose_plan">Choose Plan</string>
    <string name="my_plans">My Plans</string>
    <string name="delete_sub_profile">Delete Sub profile</string>
    <string name="delete_confirmation">Delete confirmation</string>
    <string name="login_cancelled">Login Cancelled</string>
    <string name="add_card_title">Add Card</string>
    <string name="change_pass">Are you sure you want to change the password?</string>
    <string name="enter_a_name">Name</string>
    <string name="login">Login</string>
    <string name="phone_cant_be_stuff">Phone number must be within 6–16 digits</string>
    <string name="app_settings">App Settings</string>
    <string name="app_support">Support / Help</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Logout</string>
    <string name="another_device">You logged in another Device!</string>
    <string name="pay_through">Pay through</string>
    <string name="price">Price</string>
    <string name="got_a_coupon_code">Got a Coupon Code?</string>
    <string name="coupon_apply_successful">Coupon code applied successfully!…</string>
    <string name="amount_to_pay">To Pay</string>
    <string name="invalid_payment">Invalid Payment</string>
    <string name="success">Success</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="please_reopen">Please reopen the page.</string>
    <string name="dismiss">Dismiss</string>
    <string name="payment">Payment</string>
    <string name="amount_deducted_from_referral">Amount Deducted from Referral</string>
    <string name="are_you_sure_to_delete_the_video_from_offline">Are you sure to delete the video from offline?</string>
</resources>