<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.activity.PaymentsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/cards"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cardsRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/addCard"
        android:layout_marginTop="?attr/actionBarSize"
        tools:itemCount="4"
        tools:listitem="@layout/item_card" />

    <TextView
        android:id="@+id/noResultLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_cards_added"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="@dimen/sp_18"
        android:visibility="gone"
        tools:visibility="visible"
        app:drawableTopCompat="@drawable/no_result" />

    <Button
        android:id="@+id/addCard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/drawable_white_border_rect"
        android:text="@string/add_card_title"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>