<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_16"
    android:background="@drawable/bg_button"
    android:backgroundTint="@color/header_footer">

    <LinearLayout
        android:id="@+id/ll_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_10"
        android:gravity="center">
        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Logout Confirmation"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            android:padding="@dimen/dp_10" />-->

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:rotation="180"
            android:layout_marginTop="@dimen/dp_10"
            app:srcCompat="@drawable/ic_info"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/delete_confirmation"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/are_you_sure_to_delete_the_video_from_offline"
            android:textColor="@color/textColor"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            android:padding="@dimen/dp_5"
            android:layout_margin="@dimen/dp_5"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dp_10"
            android:gravity="center">

            <TextView
                android:id="@+id/btnYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/button_support"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:paddingStart="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20"/>

            <TextView
                android:id="@+id/btnNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/bg_button"
                android:backgroundTint="@color/white"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:paddingStart="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_20"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>